GH-2276 - Add support for official IANA HAL media type identifier.
The media type identifier for HAL registered with the IANA is application/vnd.hal+json, notably different from application/hal+json used in the RFC document. This commit adds a constant for that media type identifier and updates the configuration spots necessary to additionally consider it.

[0] https://www.iana.org/assignments/media-types/application/vnd.hal+json
[1] https://datatracker.ietf.org/doc/html/draft-kelly-json-hal